Moving on with grids

--- a/latex/distributed_solver.tex
+++ b/latex/distributed_solver.tex
@@ -138,6 +138,9 @@ ordering is also significant in the future discussion of offloading computation 
 
 The following sections detail the approach to distributed computing and a few optimizations that allow RBF-FD to scale over a thousand processes. In later chapters these same decisions will tie into the resulting performance of the distributed multi-GPU implementations. 
 
+%TODO: why implement independent of PETSc, Deal.II, Trilinos, etc. 
+
+
 %
 %
 %
