--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,30 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-08-02 16:23:49 -0500 
+%% Created for Evan Bollig at 2013-08-05 02:32:01 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{BolligSphereGrids,
+	Author = {E. F. Bollig},
+	Date-Added = {2013-08-05 07:28:46 +0000},
+	Date-Modified = {2013-08-05 07:30:39 +0000},
+	Howpublished = {\url{https://github.com/bollig/sphere_grids.git}},
+	Month = {Aug},
+	Title = {Sphere Grids},
+	Year = {2012}}
+
+@misc{WomersleySloanMDNodes,
+	Author = {R. Womersley},
+	Date-Added = {2013-08-05 07:03:42 +0000},
+	Date-Modified = {2013-08-05 07:29:13 +0000},
+	Howpublished = {\url{http://web.maths.unsw.edu.au/~rsw/Sphere/Extremal/New/index.html}},
+	Month = {Oct},
+	Title = {Extremal (Maximum Determinant) points on the sphere {$S^2$}},
+	Year = {2007}}
 
 @techreport{Fornberg2012,
 	Author = {Fornberg, Bengt and Lehto, Erik and Powell, Collin},
@@ -156,8 +174,8 @@
 @misc{GPUandExascale2011,
 	Author = {Sylvie Barak},
 	Date-Added = {2012-08-11 22:07:56 -0400},
-	Date-Modified = {2012-08-11 22:08:58 -0400},
-	Howpublished = {http://www.eetimes.com/electronics-news/4230659/GPU-technology-key-to-exascale-says-Nvidia},
+	Date-Modified = {2013-08-05 07:31:56 +0000},
+	Howpublished = {\url{http://www.eetimes.com/electronics-news/4230659/GPU-technology-key-to-exascale-says-Nvidia}},
 	Month = {November},
 	Title = {GPU technology key to exascale says Nvidia},
 	Year = {2011}}
